feat: derniere version - gestion utilisateurs, badges, anomaly detection, face ID, AI integration